fix method